fixed horizontal overflow, it really bugged me

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@ body {
     /* font-family: Copperplate,Copperplate Gothic Light,fantasy; */
     line-height: 1.6;
     color: #333;
+    overflow-x: hidden;
 }
 
 header {
